# RT-cuda

./: .gitignore  CMakeLists.txt  compile.sh  kernel.cu  main.cpp
apps/: CMakeLists.txt  pathtracer.cpp
include/pathtracer/: Camera.cuh  Engine.h  Frontend.h  Primitive.h  Scene.cuh  ray.cuh  vec3.cuh
src/: CMakeLists.txt  Engine.cpp  Frontend.C  Scene.cpp  kernel.cu
